# aoc2024cpp

./: .gitignore  CMakeLists.txt  README.md
src/examples/: 06.ex
src/solutions/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  18.cpp
