cmake_minimum_required(VERSION 3.10)
project(Aoc2024 VERSION 1.1)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Adding bins
add_executable(Day01 src/solutions/01.cpp)
add_executable(Day02 src/solutions/02.cpp)
add_executable(Day03 src/solutions/03.cpp)
add_executable(Day04 src/solutions/04.cpp)
add_executable(Day05 src/solutions/05.cpp)
add_executable(Day06 src/solutions/06.cpp)
add_executable(Day07 src/solutions/07.cpp)
add_executable(Day08 src/solutions/08.cpp)
add_executable(Day09 src/solutions/09.cpp)
add_executable(Day10 src/solutions/10.cpp)
add_executable(Day11 src/solutions/11.cpp)
add_executable(Day12 src/solutions/12.cpp)
add_executable(Day13 src/solutions/13.cpp)
add_executable(Day14 src/solutions/14.cpp)
add_executable(Day15 src/solutions/15.cpp)
add_executable(Day16 src/solutions/16.cpp)
add_executable(Day17 src/solutions/17.cpp)
add_executable(Day18 src/solutions/18.cpp)
add_executable(Day19 src/solutions/19.cpp)
add_executable(Day20 src/solutions/20.cpp)
add_executable(Day21 src/solutions/21.cpp)
add_executable(Day22 src/solutions/22.cpp)
add_executable(Day23 src/solutions/23.cpp)
add_executable(Day24 src/solutions/24.cpp)
add_executable(Day25 src/solutions/25.cpp)

